--- a/线性回归相关、梯度法、主成分分析.md
+++ b/线性回归相关、梯度法、主成分分析.md
@@ -23,3 +23,19 @@
         return 1 - mean_squared_error(y_test, y_predict) / np.var(y_test)
     ```
     
+  ### 梯度下降法
+    - 作用，最小化损失函数的搜索方法
+    - 对y=损失函数与x=theta模型的求导获取损失函数的极值点最小值时
+    - 对y=损失函数与x=theta模型的求导，导数可代表方向，导数为负表示损失函数在X轴负方向上递增
+    - eta表示步长 (学习率，梯度下降法的超参数)，-eta * dJ * dtheta 表示单位步长。eta太小影响计算效率，太大导致损失函数反而上升没有计算结果
+    - 并不是所有y=损失函数与x=theta模型都有唯一的极小值，初始点也是梯度下降的超参数
+      - 解决方法： 每次随机初始点，多次运行
+    - 向量化和数据标准化：数据的单位要以归一法进行处理
+    - 梯度下降法的优化。可用随机梯度下降法进行
+     
+  ### 主成分分析法
+    - 主要作用，降维，去噪，可视化
+    - 步骤1: 样本均值归0 demean
+    - 步骤2: 方差最大值
+  ### 梯度上升法
+    - 
