--- a/线性回归相关、梯度法、主成分分析.md
+++ b/线性回归相关、梯度法、主成分分析.md
@@ -33,9 +33,11 @@
     - 向量化和数据标准化：数据的单位要以归一法进行处理
     - 梯度下降法的优化。可用随机梯度下降法进行
      
-  ### 主成分分析法
-    - 主要作用，降维，去噪，可视化
+  ### 主成分分析法，梯度分析法获取最佳的w单位向量
+    - 主要作用，降维，降噪，可视化
+      - 降维：多维数据如二维数据的点映射到一条直线上，该数据集的方处于最大值，使尽可能保留数据。
+      - 降噪：降低维度的同时，数据集中到一其他维度，如二维数据映射到一条直线上，虽丢失了信息，但可能丢失了更多无效数据，增加了精度
     - 步骤1: 样本均值归0 demean
     - 步骤2: 方差最大值
-  ### 梯度上升法
-    - 
+    - 计算得到第一主成分分量，将demean后的数据减去第一主成分分量后即可计算其他成分，循环往复
+    
