--- a/线性回归相关、梯度法、主成分分析.md
+++ b/线性回归相关、梯度法、主成分分析.md
@@ -40,4 +40,29 @@
     - 步骤1: 样本均值归0 demean
     - 步骤2: 方差最大值
     - 计算得到第一主成分分量，将demean后的数据减去第一主成分分量后即可计算其他成分，循环往复
+    ```py
+    # sklearn中的使用
+    import numpy as np
+    import matplotlib.pyplot as plt
+    from sklearn import datasets
+    digits = datasets.load_digits()
+    X = digits.data
+    y = digits.target
+    from sklearn.model_selection import train_test_split # 导入数据拆分
+    X_train, X_test, y_train, y_test = train_test_split(X,y,random_state=666)
+    from sklearn.neighbors import KNeighborsClassifier
+    knn_clf1 = KNeighborsClassifier()
+    X_train1, X_test1, y_train1, y_test1 = train_test_split(X, y, random_state=666)
+    knn_clf1.fit(X_train1,y_train1)
+    knn_clf1.score(X_test1,y_test1) # time= 20ms, 98.5%
+    
+    #pca降维降噪后
+    from sklearn.decomposition import PCA
+    pca = PCA(0.95)
+    pca.fit(X_train1)
+    X_train_reducation1 = pca.transform(X_train1)
+    X_test_reducation1 = pca.transform(X_test1)
+    knn_clf1.fit(X_train_reducation1, y_train)
+    knn_clf1.score(X_test_reducation1,y_test1) # time = 10ms 98%
+    ```
     
